# nyx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/dev/: session-log.md
nyx/: __init__.py  __main__.py  actions.py  activity.py  app.py  avatar.py  backend.py  bubble.py  chatlog.py  client.py  config.py  confirm.py  control.py  history.py  hud.py  inputbar.py  ipc.py  markup.py  moodstate.py  notifqueue.py  notifyd.py  phonetics.py  policy.py  sparkle.py  streamparse.py  stt_worker.py  theme.py  transcript.py  voice.py
nyx/watchers/: __init__.py  base.py  eod.py  repos.py  sessions.py  system.py  usb.py
scripts/: gemini_tts_smoke.py
tests/: test_chatlog.py  test_config.py  test_markup.py  test_moodstate.py  test_notifqueue.py  test_notifyd.py  test_phonetics.py  test_policy.py  test_streamparse.py  test_transcript.py  test_voice.py  test_watchers.py  test_watchers_logic.py
tests/fixtures/: transcript.jsonl  turn.jsonl
